<resources>
    <string name="app_name">TitForTat</string>

    <!-- StartActivity -->
    <string name="app_name_jp">しっぺ返し戦略</string>
    <string name="start">スタート</string>

    <!-- MainActivity -->
    <string name="unknown">？</string>
    <string name="question">どうしますか？</string>
    <string name="confess">自白</string>
    <string name="silence">黙秘</string>

    <!-- ResultActivity -->
    <string name="result">結果</string>
    <string name="you">あなたは懲役 </string>
    <string name="opponent">相手は懲役 </string>
    <string name="zero">0</string>
    <string name="years"> 年になりました！</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>